# LearnOpenGL

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: Application.cpp  main.cpp
assets/shaders/: basic.frag  basic.vert  renderer2d.frag  renderer2d.vert
cmake/: imgui.cmake
engine/: CMakeLists.txt  imgui.ini
engine/include/engine/: Application.h  Camera2D.h  ImGuiLayer.h  IndexBuffer.h  Renderer.h  Renderer2D.h  Shader.h  Sprite.h  Texture.h  TextureAtlas.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  Window.h
engine/include/engine/Event/: ApplicationEvent.h  Event.h  EventDispatcher.h  KeyEvent.h  MouseEvent.h
engine/include/engine/core/: Application.h  Log.h  Window.h
engine/include/engine/editor/: EditorLayer.h
engine/include/engine/layer/: Layer.h  LayerStack.h  RenderLayer.h
engine/include/engine/renderer/: Framebuffer.h
engine/include/engine/ui/: ImGuiLayer.h
engine/src/: Application.cpp  Camera2D.cpp  ImGuiLayer.cpp  IndexBuffer.cpp  Renderer.cpp  Renderer2D.cpp  Shader.cpp  Texture.cpp  TextureAtlas.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  Window.cpp
engine/src/core/: Application.cpp  Log.cpp  Window.cpp
engine/src/editor/: EditorLayer.cpp
engine/src/layer/: LayerStack.cpp  RenderLayer.cpp
engine/src/renderer/: Framebuffer.cpp
engine/src/ui/: ImGuiLayer.cpp
